--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,34 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --breakpoint-split: 850px;
+  --color-neutral-100: #000033;
+  --color-primary: #00482f;
+  --color-grayy: #6b7280;
+  --color-yellow: #f18d01;
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+  font-family: "Satoshi Variable";
+  src: url("/Fonts/Variable/Satoshi-Variable.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Satoshi Variable", sans-serif;
+  font-weight: bolder;
+  font-weight: 400;
+}
+
+#caption::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 100%;
+  height: 100%;
+  aspect-ratio: 1 / 1;
+  background-image: url("/images/append.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
